--- a/EkipMobilya/EkipMobilya.csproj
+++ b/EkipMobilya/EkipMobilya.csproj
@@ -5025,6 +5025,7 @@
     <Content Include="Media\images\urun\tv2.jpg" />
     <Content Include="Media\images\urun\tv3.jpg" />
     <Content Include="Media\images\urun\tv3_1.jpg" />
+    <Content Include="Media\slider\GRAND MAKAM TAKIMI 00190607088.jpg" />
     <Content Include="Media\static\images\banner\20likLatekspudralı.jpg" />
     <Content Include="Media\static\images\banner\20likLatekspudralı_1.jpg" />
     <Content Include="Media\static\images\banner\20likLatekspudralı_2.jpg" />
